@@ -19,6 +19,8 @@ typedef INT8 int8_t;
 typedef UINT8 uint8_t;
 typedef INT16 int16_t;
 typedef UINT16 uint16_t;
+typedef INT32 int32_t;
+typedef UINT32 uint32_t;
 #else
 #error Do not know sized types on this platform
 #endif
